[gd_scene load_steps=7 format=3 uid="uid://i8rhcs8lkq3s"]

[ext_resource type="PackedScene" path="res://scenes/PlayerVerification.tscn" id="1"]
[ext_resource type="Script" path="res://Server.gd" id="2"]
[ext_resource type="Script" path="res://scenes/StateProcessing.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://di32sgpusahmi" path="res://scenes/maps/BaseLevel2.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c1ope52a3xq0v" path="res://scenes/maps/BaseLevel.tscn" id="5"]
[ext_resource type="Script" path="res://scenes/maps/Camera2D.gd" id="6"]

[node name="Server" type="Node"]
script = ExtResource("2")

[node name="PlayerVerification" parent="." instance=ExtResource("1")]

[node name="VerificationExpiration" type="Timer" parent="PlayerVerification"]
wait_time = 10.0
autostart = true

[node name="TokenExpiration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="World" type="Node" parent="."]

[node name="CharacterSelect" type="Node" parent="World"]

[node name="Maps" type="Node" parent="World"]

[node name="BaseLevel" parent="World/Maps" instance=ExtResource("5")]
position = Vector2(7, 1)

[node name="BaseLevel2" parent="World/Maps" instance=ExtResource("4")]
position = Vector2(1272, 0)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="StateProcessing" type="Node" parent="."]
script = ExtResource("3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, -301)
script = ExtResource("6")

[connection signal="timeout" from="PlayerVerification/VerificationExpiration" to="PlayerVerification" method="_on_VerificationExpiration_timeout"]
[connection signal="timeout" from="TokenExpiration" to="." method="_on_TokenExpiration_timeout"]
